plugins {
    id 'java'
    id 'idea'
    id 'checkstyle'
    id "com.github.johnrengelman.shadow" version "8.1.1"
}

allprojects {
    group 'cc.dreamcode.ffa'
    version '1.0-InDEV'

    apply plugin: 'java-library'
    apply plugin: 'checkstyle'

    java {
        withSourcesJar()
    }

    idea {
        project {
            jdkName = "17"
            languageLevel = "8"
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    checkstyle {
        toolVersion '10.3.1'
        maxWarnings = 0
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://repo.dreamcode.cc/releases" }
        maven { url "https://storehouse.okaeri.eu/repository/maven-public" }
    }
}

subprojects {
    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'
        testCompileOnly 'org.projectlombok:lombok:1.18.30'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    }

    apply plugin: 'com.github.johnrengelman.shadow'

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}